==================
### 1.5.2 (beta)
==================

Bug fixes:
- Correctly detect pets.
- Set maxDistance = distance (instead of defaulting to 30) in attackSkillSlot.

New features:
- Mask password input display '*' instead of your real password (Only on linux
  console)
- partyAggressives now counts monsters your party attacked.

New config options:
- ksPlayers is a comma-seperated lists of player names that should be treated
  as if they were in your party for the purpose of KS checks.
- beepDomains contains a list of message domains (see Log.pm) for which
  openkore will beep.
- beepDomains_notInTown contains a list of message domains that are exempted
  from beepDomains if you are in a town.
- beepOnChat and beepOnPM were removed. Use this instead:
  beepDomains publicchat,emotion,pm

Internal:
- Move a "pm" message into "pm/sent" domain so that "beepOnDomains pm" won't
  beep on your own PMs.

Credits:
- jsteng: Pet detection fix.


==================
### 1.5.1 (beta)
==================

Bug fixes:
- Fix "undefined value as HASH" bug in the Wx item list control.
- Reset earned money when openshop.
- Fix crash when using "move" and "date" commands via PM/chat.
- partySkill target_timeouts are now saved when openkore uses the skill
  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.
- Various attackComboSlot bug fixes.
- "You are in Stunned state" message was verbosity 2 instead of 1.
- 'autostorage' command will now work even if storageAuto is set to 0.
- Sometimes openkore would stop auto-storing items covered by the 'all'
  setting in items_control.txt, necessitating a reload.
- Zeny earned is reset when you use "exp reset".
- "Inventory Item Removed" message was not being displayed when you drop
  (instead of fire) arrows.
- Your shop title and chatroom title will not longer than 36 characters.